aggiornata transizione barPlot (parziale)

--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -833,7 +833,7 @@
    ],
    "source": [
     "# remove null and duplicate values\n",
-    "# df.dropna(inplace=True)\n",
+    "df.dropna(inplace=True)\n",
     "df.drop_duplicates(inplace=True, subset=['Player', 'Rk'])\n",
     "# print a Player that includes González in the Player\n",
     "print(df[df['Player'].str.contains('González')])"
@@ -848,30 +848,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          count         mean         std   min      25%      50%      75%   \n",
-      "Rk       2921.0  1461.000000  843.364393   1.0   731.00  1461.00  2191.00  \\\n",
-      "Age      2920.0    26.092123    4.641746  16.0    23.00    26.00    29.00   \n",
-      "Born     2921.0  1994.725094   37.210426   0.0  1992.00  1996.00  1999.00   \n",
-      "MP       2921.0    18.800068   11.619882   1.0     8.00    20.00    29.00   \n",
-      "Starts   2921.0    13.749743   11.393763   0.0     3.00    12.00    23.00   \n",
-      "...         ...          ...         ...   ...      ...      ...      ...   \n",
-      "OG       2921.0     0.003451    0.020306   0.0     0.00     0.00     0.00   \n",
-      "Recov    2921.0     7.410294    3.650554   0.0     5.07     7.38     9.38   \n",
-      "AerWon   2921.0     1.664286    1.938046   0.0     0.52     1.23     2.27   \n",
-      "AerLost  2921.0     1.858305    2.245096   0.0     0.84     1.39     2.21   \n",
-      "AerWon%  2921.0    40.485861   24.297290   0.0    26.20    43.50    57.10   \n",
+      "          count         mean         std     min      25%      50%      75%   \n",
+      "Rk       2329.0  1460.254186  840.756215     1.0   725.00  1456.00  2196.00  \\\n",
+      "Age      2329.0    26.986260    4.238871    18.0    24.00    27.00    30.00   \n",
+      "Born     2329.0  1994.510090    4.234635  1981.0  1992.00  1995.00  1998.00   \n",
+      "MP       2329.0    20.594676   11.053280     1.0    11.00    22.00    30.00   \n",
+      "Starts   2329.0    15.440103   11.236101     0.0     5.00    15.00    25.00   \n",
+      "...         ...          ...         ...     ...      ...      ...      ...   \n",
+      "OG       2329.0     0.003744    0.021510     0.0     0.00     0.00     0.00   \n",
+      "Recov    2329.0     7.531816    3.268692     0.0     5.29     7.50     9.44   \n",
+      "AerWon   2329.0     1.670593    1.789465     0.0     0.58     1.29     2.31   \n",
+      "AerLost  2329.0     1.805500    2.039547     0.0     0.89     1.40     2.13   \n",
+      "AerWon%  2329.0    41.905668   22.821040     0.0    30.30    44.70    58.00   \n",
       "\n",
       "            max  \n",
       "Rk       2921.0  \n",
       "Age        41.0  \n",
-      "Born     2006.0  \n",
+      "Born     2003.0  \n",
       "MP         38.0  \n",
       "Starts     38.0  \n",
       "...         ...  \n",
       "OG          0.5  \n",
-      "Recov      40.0  \n",
+      "Recov      30.0  \n",
       "AerWon     30.0  \n",
-      "AerLost    40.0  \n",
+      "AerLost    30.0  \n",
       "AerWon%   100.0  \n",
       "\n",
       "[138 rows x 8 columns]\n"
@@ -897,12 +897,12 @@
       "1427    1.09\n",
       "2717    0.99\n",
       "        ... \n",
-      "3082    0.00\n",
-      "3106    0.00\n",
-      "3110    0.00\n",
-      "3123    1.92\n",
-      "3139    2.83\n",
-      "Name: CarDis, Length: 905, dtype: float64\n"
+      "2100    0.54\n",
+      "727     0.37\n",
+      "2073    0.78\n",
+      "650     0.50\n",
+      "1613    0.93\n",
+      "Name: CarDis, Length: 724, dtype: float64\n"
      ]
     }
    ],
