--- a/data-analytics.ipynb
+++ b/data-analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -238,50 +238,50 @@
        "</div>"
       ],
       "text/plain": [
-       "   sofifa_id                                         player_url   \n",
-       "0     158023  https://sofifa.com/player/158023/lionel-messi/...  \\\n",
+       "   sofifa_id                                         player_url  \\\n",
+       "0     158023  https://sofifa.com/player/158023/lionel-messi/...   \n",
        "1      20801  https://sofifa.com/player/20801/c-ronaldo-dos-...   \n",
        "2     188545  https://sofifa.com/player/188545/robert-lewand...   \n",
        "3     190871  https://sofifa.com/player/190871/neymar-da-sil...   \n",
        "4     192985  https://sofifa.com/player/192985/kevin-de-bruy...   \n",
        "\n",
-       "          short_name                            long_name player_positions   \n",
-       "0           L. Messi       Lionel Andrés Messi Cuccittini       RW, ST, CF  \\\n",
+       "          short_name                            long_name player_positions  \\\n",
+       "0           L. Messi       Lionel Andrés Messi Cuccittini       RW, ST, CF   \n",
        "1  Cristiano Ronaldo  Cristiano Ronaldo dos Santos Aveiro           ST, LW   \n",
        "2     R. Lewandowski                   Robert Lewandowski               ST   \n",
        "3          Neymar Jr        Neymar da Silva Santos Júnior          LW, CAM   \n",
        "4       K. De Bruyne                      Kevin De Bruyne          CAM, CM   \n",
        "\n",
-       "   overall  potential    value_eur  wage_eur  age  ...    cb   rcb    rb   \n",
-       "0       93         93  103500000.0  560000.0   33  ...  52+3  52+3  62+3  \\\n",
+       "   overall  potential    value_eur  wage_eur  age  ...    cb   rcb    rb  \\\n",
+       "0       93         93  103500000.0  560000.0   33  ...  52+3  52+3  62+3   \n",
        "1       92         92   63000000.0  220000.0   35  ...  54+3  54+3  61+3   \n",
        "2       91         91  111000000.0  240000.0   31  ...  60+3  60+3  61+3   \n",
        "3       91         91  132000000.0  270000.0   28  ...  49+3  49+3  62+3   \n",
        "4       91         91  129000000.0  370000.0   29  ...  69+3  69+3  75+3   \n",
        "\n",
-       "     gk                                    player_face_url   \n",
-       "0  19+3  https://cdn.sofifa.net/players/158/023/21_120.png  \\\n",
+       "     gk                                    player_face_url  \\\n",
+       "0  19+3  https://cdn.sofifa.net/players/158/023/21_120.png   \n",
        "1  20+3  https://cdn.sofifa.net/players/020/801/21_120.png   \n",
        "2  19+3  https://cdn.sofifa.net/players/188/545/21_120.png   \n",
        "3  20+3  https://cdn.sofifa.net/players/190/871/21_120.png   \n",
        "4  21+3  https://cdn.sofifa.net/players/192/985/21_120.png   \n",
        "\n",
-       "                             club_logo_url   \n",
-       "0  https://cdn.sofifa.net/teams/241/60.png  \\\n",
+       "                             club_logo_url  \\\n",
+       "0  https://cdn.sofifa.net/teams/241/60.png   \n",
        "1   https://cdn.sofifa.net/teams/45/60.png   \n",
        "2   https://cdn.sofifa.net/teams/21/60.png   \n",
        "3   https://cdn.sofifa.net/teams/73/60.png   \n",
        "4   https://cdn.sofifa.net/teams/10/60.png   \n",
        "\n",
-       "                             club_flag_url   \n",
-       "0      https://cdn.sofifa.net/flags/es.png  \\\n",
+       "                             club_flag_url  \\\n",
+       "0      https://cdn.sofifa.net/flags/es.png   \n",
        "1      https://cdn.sofifa.net/flags/it.png   \n",
        "2      https://cdn.sofifa.net/flags/de.png   \n",
        "3      https://cdn.sofifa.net/flags/fr.png   \n",
        "4  https://cdn.sofifa.net/flags/gb-eng.png   \n",
        "\n",
-       "                            nation_logo_url   \n",
-       "0  https://cdn.sofifa.net/teams/1369/60.png  \\\n",
+       "                            nation_logo_url  \\\n",
+       "0  https://cdn.sofifa.net/teams/1369/60.png   \n",
        "1  https://cdn.sofifa.net/teams/1354/60.png   \n",
        "2                                       NaN   \n",
        "3                                       NaN   \n",
@@ -297,7 +297,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -420,9 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\franc\\AppData\\Local\\Temp\\ipykernel_14508\\3857645863.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df['ClubLogoUrl'].fillna(method='ffill', inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "df['PlayerFaceUrl'].fillna('https://cdn.sofifa.net/player_0.svg', inplace=True)\n",
     "# sort by SquadName\n",
@@ -434,15 +443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Rk          Player Nation Pos     Comp   Age  Born  MP  Starts   Min   \n",
-      "1114  1035     G. González    URU  DF  La Liga  27.0  1994   9       3   365  \\\n",
+      "        Rk          Player Nation Pos     Comp   Age  Born  MP  Starts   Min  \\\n",
+      "1114  1035     G. González    URU  DF  La Liga  27.0  1994   9       3   365   \n",
       "1119  1036     N. González    ESP  MF  La Liga  20.0  2002  27      12  1114   \n",
       "1122  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
       "1121  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
@@ -453,8 +462,8 @@
       "1117  1036     N. González    ESP  MF  La Liga  20.0  2002  27      12  1114   \n",
       "1120  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
       "\n",
-      "      ...  PKwon  PKcon   OG  Recov  AerWon  AerLost  AerWon%   \n",
-      "1114  ...   0.00   0.00  0.0   8.54    2.44     2.93     45.5  \\\n",
+      "      ...  PKwon  PKcon   OG  Recov  AerWon  AerLost  AerWon%  \\\n",
+      "1114  ...   0.00   0.00  0.0   8.54    2.44     2.93     45.5   \n",
       "1119  ...   0.00   0.00  0.0   7.50    0.65     0.97     40.0   \n",
       "1122  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
       "1121  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
@@ -465,8 +474,8 @@
       "1117  ...   0.00   0.00  0.0   7.50    0.65     0.97     40.0   \n",
       "1120  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
       "\n",
-      "                          Squad   \n",
-      "1114      Club Atlético Peñarol  \\\n",
+      "                          Squad  \\\n",
+      "1114      Club Atlético Peñarol   \n",
       "1119  Club Atlético River Plate   \n",
       "1122  Club Atlético River Plate   \n",
       "1121         Defensa y Justicia   \n",
@@ -477,8 +486,8 @@
       "1117              VfB Stuttgart   \n",
       "1120              VfB Stuttgart   \n",
       "\n",
-      "                                          PlayerFaceUrl   \n",
-      "1114  https://cdn.sofifa.net/players/247/802/21_120.png  \\\n",
+      "                                          PlayerFaceUrl  \\\n",
+      "1114  https://cdn.sofifa.net/players/247/802/21_120.png   \n",
       "1119  https://cdn.sofifa.net/players/255/784/21_120.png   \n",
       "1122  https://cdn.sofifa.net/players/255/784/21_120.png   \n",
       "1121  https://cdn.sofifa.net/players/258/124/21_120.png   \n",
@@ -512,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +787,7 @@
        "[663 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,33 +799,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Rk          Player Nation Pos     Comp   Age  Born  MP  Starts   Min   \n",
-      "1114  1035     G. González    URU  DF  La Liga  27.0  1994   9       3   365  \\\n",
+      "        Rk          Player Nation Pos     Comp   Age  Born  MP  Starts   Min  \\\n",
+      "1114  1035     G. González    URU  DF  La Liga  27.0  1994   9       3   365   \n",
       "1119  1036     N. González    ESP  MF  La Liga  20.0  2002  27      12  1114   \n",
       "1122  1037     N. González    ARG  FW  Serie A  24.0  1998  33      26  2357   \n",
       "1111  1033  Diego González    ESP  DF  La Liga  27.0  1995  28      19  1793   \n",
       "\n",
-      "      ...  PKwon  PKcon   OG  Recov  AerWon  AerLost  AerWon%   \n",
-      "1114  ...   0.00   0.00  0.0   8.54    2.44     2.93     45.5  \\\n",
+      "      ...  PKwon  PKcon   OG  Recov  AerWon  AerLost  AerWon%  \\\n",
+      "1114  ...   0.00   0.00  0.0   8.54    2.44     2.93     45.5   \n",
       "1119  ...   0.00   0.00  0.0   7.50    0.65     0.97     40.0   \n",
       "1122  ...   0.11   0.00  0.0   4.58    3.13     2.52     55.4   \n",
       "1111  ...   0.00   0.05  0.0   6.83    1.71     1.71     50.0   \n",
       "\n",
-      "                          Squad   \n",
-      "1114      Club Atlético Peñarol  \\\n",
+      "                          Squad  \\\n",
+      "1114      Club Atlético Peñarol   \n",
       "1119  Club Atlético River Plate   \n",
       "1122  Club Atlético River Plate   \n",
       "1111                  Málaga CF   \n",
       "\n",
-      "                                          PlayerFaceUrl   \n",
-      "1114  https://cdn.sofifa.net/players/247/802/21_120.png  \\\n",
+      "                                          PlayerFaceUrl  \\\n",
+      "1114  https://cdn.sofifa.net/players/247/802/21_120.png   \n",
       "1119  https://cdn.sofifa.net/players/255/784/21_120.png   \n",
       "1122  https://cdn.sofifa.net/players/255/784/21_120.png   \n",
       "1111  https://cdn.sofifa.net/players/227/106/21_120.png   \n",
@@ -841,15 +850,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          count         mean         std     min      25%      50%      75%   \n",
-      "Rk       2329.0  1460.254186  840.756215     1.0   725.00  1456.00  2196.00  \\\n",
+      "          count         mean         std     min      25%      50%      75%  \\\n",
+      "Rk       2329.0  1460.254186  840.756215     1.0   725.00  1456.00  2196.00   \n",
       "Age      2329.0    26.986260    4.238871    18.0    24.00    27.00    30.00   \n",
       "Born     2329.0  1994.510090    4.234635  1981.0  1992.00  1995.00  1998.00   \n",
       "MP       2329.0    20.594676   11.053280     1.0    11.00    22.00    30.00   \n",
@@ -884,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +922,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df[df.duplicated(['Player'], keep=False)][['Player', 'Squad', 'Pos', 'Goals', '90s']])\n",
+    "df = df.sort_values('90s', ascending=False).drop_duplicates(['Player'])\n",
+    "print(df[df.duplicated(['Player'], keep=False)][['Player', 'Squad', 'Pos', 'Goals', '90s']])\n",
+    "df.sort_values(by=['Player']).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
